Connection Pool Max Size

--- a/mflix-java/mflix/src/main/resources/application.properties
+++ b/mflix-java/mflix/src/main/resources/application.properties
@@ -5,7 +5,7 @@ jwtExpirationInMs=604800000
 # mongodb+srv://<username>:<password>@<host>/<database>
 # the srv record manages the info related to the cluster
 # retryWrites=true Retries the connection if it fails
-spring.mongodb.uri=mongodb+srv://m220student:m220password@mflix-cxjdm.mongodb.net/test?retryWrites=true
+spring.mongodb.uri=mongodb+srv://m220student:m220password@mflix-cxjdm.mongodb.net/test?retryWrites=true&maxPoolSize=50
 spring.mongodb.database=mflix
 server.port=5000
 logging.level.api.controllers=DEBUG
